added de's advice

--- a/advice/dhawkins-advice.html
+++ b/advice/dhawkins-advice.html
@@ -9,14 +9,14 @@
 </head>
 
 <!-- replace skillcrush with your name here -->
-<body class="DeAdvice">
+<body class="dhAdvice">
 	<header>
 		<a href="../index.html">Back to Main Page</a>
 		<h1>Hi, my name is De, and I have some advice I'd love to share!</h1>
 	</header>
 
 	<section>
-		<div class="advice">
+		<div class="dh-advice">
 			<h4>Practice Practice Practice</h4>
 			<div class="advice-item">			
 				<p>When learning to code you will have to plan to spend lots of time practicing. The programming skill gets better with lots of practice. As a matter of fact it requires more time to practice than actually solving difficult problems. </p>
@@ -26,10 +26,10 @@
 				
 			<h4>Challenge Self</h4>
 			<div class="advice-item">
-				<p>You will have plenty of opportunities to challeng yourself when you are learning to program.  Don't just do the exercises to complete them Only, challenge yourself.</p>
+				<p>You will have plenty of opportunities to challenge yourself when you are learning to program.  Don't just do the exercises to finish them, add additional code/features, challenge yourself.</p>
 
 
-<p>It is when we challene ourselves that we really learn.  Stretch yourself towards the personal gpals you may have every day.</p>
+<p>It is when we challenge ourselves that we really learn.  Stretch yourself towards the personal goals you have every singly day.</p>
 				
 </div>
 </div>
@@ -37,7 +37,7 @@
 
 	<footer>
 		<!-- replace Skillcrush with your name here -->
-		<p>&copy; Copyright De 2014.
+		<p>&copy; Copyright DeHawkins.com  2015.
 	</footer>
 </body>
 </html>
