added de's advice

--- a/advice/dhawkins-advice.html
+++ b/advice/dhawkins-advice.html
@@ -1,37 +1,46 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="../css/style.css">
-	
-	<!-- replace Skillcrush with your name here -->
-	<title>De's Advice For Newbies</title>
-</head>
+<head>                                                                                                            
+        <meta charset="utf-8">                                    
+        <link href="dhawkins-style.css" rel="stylesheet" type="text/css"/>                                        
+        <!-- replace Skillcrush with your name here -->  
+        <title>De's Advice For Newbies</title>                                                                    
+</head>                                                                                                           
 
-<!-- replace skillcrush with your name here -->
+<!-- replace skillcrush with your name here -->                                                                   
 <body class="dhAdvice">
-	<header>
-		<a href="../index.html">Back to Main Page</a>
-		<h1>Hi, my name is De, and I have some advice I'd love to share!</h1>
-	</header>
+<a href="../index.html">Back to Main Page</a>  
+
+<div id="pagetitle">  
+  <h1> De's Advice</h1>
+</div>                                                                                           
+
+        <header>                       
+                <h1>Hi, my name is De, and I have some advice I'd love to share!</h1>                             
+        </header> 
 
 	<section>
 		<div class="dh-advice">
 			<h4>Practice Practice Practice</h4>
 			<div class="advice-item">			
-				<p>When learning to code you will have to plan to spend lots of time practicing. The programming skill gets better with lots of practice. As a matter of fact it requires more time to practice than actually solving difficult problems. </p>
+				<p>When learning to code you will have to plan to spend lots of time practicing.
+                                  The programming skill gets better with lots of practice. As a matter of fact it
+                                   requires more time to practice than actually solving difficult problems. </p>
 
-				<p>If you are starting out then I recommend identifying some time to spend to practice coding each day for a few months before you will actually feel comfortable programming.</p>
+				<p>If you are starting out then I recommend identifying some scheduled time to 
+                                   spend to practice coding each day for a few months before you will actually
+                                   feel comfortable programming.</p>
 			</div>
 				
 			<h4>Challenge Self</h4>
 			<div class="advice-item">
-				<p>You will have plenty of opportunities to challenge yourself when you are learning to program.  Don't just do the exercises to finish them, add additional code/features, challenge yourself.</p>
+				<p>You will have plenty of opportunities to challenge yourself when you are 
+                                 learning to program.  Don't just do the exercises to finish them, add 
+                                 additional code/features, challenge yourself.</p>
 
-
-<p>It is when we challenge ourselves that we really learn.  Stretch yourself towards the personal goals you have every singly day.</p>
-				
-</div>
+                               <p>It is when we challenge ourselves that we really learn.  Stretch yourself 
+                                       towards the personal goals you have every singly day.</p>
+                        </div>
 </div>
     </section>
 
