minor revision to update

--- a/advice/dhawkins-advice.html
+++ b/advice/dhawkins-advice.html
@@ -12,7 +12,7 @@
 <a href="../index.html">Back to Main Page</a>  
 
 <div id="pagetitle">  
-  <h1> De's Advice</h1>
+  <h1> De's Advice Page</h1>
 </div>                                                                                           
 
         <header>                       
